added github pages information and table

--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
     <h2>
         Net ID: g81v618
     </h2>
-    <a href=""></a>
+    <a href="https://smanjali.github.io/">
+        my github page
+    </a>
     <h2>
         Class Schedule
     </h2>
+    <table>
+        <tr>
+            <th>Monday</th>
+            <th>Tuesday</th> 
+            <th>Wednesday</th> 
+            <th>Thursday</th> 
+            <th>Friday</th>
+            <th>Saturday</th> 
+            <th>Sunday</th>   
+        </tr>
+    </table>
     <h2>
         Previous Courses
     </h2>
     <ul>
         <li>CSCI 232</li>
         <li>CSCI 331</li>
-        <li>CSCI 440</li>
-        <li>CSCI 232</li>
-        <li>CSCI 232</li>
+        <li>CSCI 468</li>
+        <li>ESOF 322</li>
+        <li>CSCI 495</li>
     </ul>
 </body>
 </html>
