finished all my assignment information

--- a/index.html
+++ b/index.html
@@ -13,20 +13,53 @@
         Net ID: g81v618
     </h2>
     <a href="https://smanjali.github.io/">
-        my github page
+        My GitHub Pages Site
     </a>
     <h2>
         Class Schedule
     </h2>
     <table>
         <tr>
+            <td>&nbsp;</td>
             <th>Monday</th>
             <th>Tuesday</th> 
             <th>Wednesday</th> 
             <th>Thursday</th> 
-            <th>Friday</th>
-            <th>Saturday</th> 
-            <th>Sunday</th>   
+            <th>Friday</th> 
+        </tr>
+        <tr>
+            <td>10:00</td>
+        </tr>
+        <tr>
+            <td>11:00</td>
+            <td colspan="2"> CSCI 446</td>
+            <td colspan="2"> CSCI 446</td>
+            <td> CSCI 446</td>
+        </tr>
+        <tr>
+            <td>12:00</td>
+            <td colspan="2"> CSCI 466</td>
+            <td colspan="2"> CSCI 466</td>
+            <td> CSCI 466</td>
+        </tr>
+        <tr>
+            <td>1:00</td>
+            <td colspan="2"> CSCI 331</td>
+            <td colspan="2"> CSCI 331</td>
+            <td> CSCI 331</td>
+        </tr>
+        <tr>
+            <td colspan="2">2:00</td>
+        </tr>
+        <tr>
+            <td colspan="2">3:00</td>
+            <td colspan="2"> CSCI 476</td>
+            <td> CSCI 476</td>
+        </tr>
+        <tr>
+            <td>3:30</td>
+            <td colspan="2"> ACT 156</td>
+            <td> ACT 156</td>
         </tr>
     </table>
     <h2>
