--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <th>Friday</th> 
         </tr>
         <tr>
-            <td>10:00</td>
+            <td colspan="5">10:00</td>
         </tr>
         <tr>
             <td>11:00</td>
@@ -49,7 +49,7 @@
             <td> CSCI 331</td>
         </tr>
         <tr>
-            <td colspan="2">2:00</td>
+            <td colspan="5">2:00</td>
         </tr>
         <tr>
             <td colspan="2">3:00</td>
@@ -59,7 +59,7 @@
         <tr>
             <td>3:30</td>
             <td colspan="2"> ACT 156</td>
-            <td> ACT 156</td>
+            <td colspan="3"> ACT 156</td>
         </tr>
     </table>
     <h2>
