all the answers as text files

--- a/nextJS/index.html
+++ b/nextJS/index.html
@@ -24,7 +24,7 @@
             <link to <a href="https://github.com/smanjali/smanjali.github.io">GitHub</a>
         </p>
 
-        <script type="text/babel" src="js/counter.js"></script>
+        <script type="text/babel" src="js/app.js"></script>
         <script src="js/store.js"></script>
     </body>
 </html>
